--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -39,6 +39,7 @@ body {
 
 body {
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -173,4 +174,16 @@ ul li a:hover {
 footer {
   padding: 24px 0;
   text-align: center;
+  font: size 14px;
+}
+
+/* media queries */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg_escuro.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg_claro.jpg);
+  }
 }
