--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 
 .light {
   --text-color: black;
-  --bg-url: url(./Assets/bg-mobile-light.png);
+  --bg-url: url(./Assets/bg-mobile-light.jpg);
   --stroke-color: (0, 0, 0, 0.5);
   --surface-color: rgba(0, 0, 0, 0.05);
   --surface-color-hover: rgba(0, 0, 0, 0.02);
